@@ -39,6 +39,7 @@ Release 0.8.6
   that do not need categories, for example some Ajax calls
 - simplify follow up redirects by accepting a URL property in ZMRedirectView
 - add language support to ZMManufacturers
+- add redirect controller and other related bits + pieces
 
 Release 0.8.5
 - add 'php_flag register_globals off' to main .htaccess file
